objects/Mechanical_Service_Sheet__c/fields/Pipework__c.field-meta.xml
<CustomField>
    <fullName>Pipework__c</fullName>
    <label>Pipework</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>