objects/Mechanical_Service_Sheet__c/fields/PO_Number_on_Certificate__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_on_Certificate__c</fullName>
    <formula>IF ( Order_No__c &lt;&gt; &quot;&quot;, Order_No__c, Current_Service_PO_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If there is a PO on the reactive in the field called &quot;Order Number&quot; the certificate will use this, otherwise the certificate will use the PO number from the visit, site contract or site.</inlineHelpText>
    <label>PO Number on Certificate</label>
    <type>Text</type>
</CustomField>