objects/Mechanical_Service_Sheet__c/fields/Pressures_Oty__c.field-meta.xml
<CustomField>
    <fullName>Pressures_Oty__c</fullName>
    <label>Pressures Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>