objects/Mechanical_Service_Sheet__c/fields/Pump_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pump_Reason__c</fullName>
    <label>Pump Reason</label>
    <type>TextArea</type>
</CustomField>