objects/Mechanical_Service_Sheet__c/fields/Pump_Room_Signs__c.field-meta.xml
<CustomField>
    <fullName>Pump_Room_Signs__c</fullName>
    <label>Pump Room Signs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>