objects/Mechanical_Service_Sheet__c/fields/Quantity1__c.field-meta.xml
<CustomField>
    <fullName>Quantity1__c</fullName>
    <label>Quantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>