objects/Mechanical_Service_Sheet__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>