objects/Mechanical_Service_Sheet__c/fields/Retention_Time__c.field-meta.xml
<CustomField>
    <fullName>Retention_Time__c</fullName>
    <label>Retention Time (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>