objects/Mechanical_Service_Sheet__c/fields/Return_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Visit_Reason__c</fullName>
    <inlineHelpText>Please enter the reason for the return visit in this box. This box must be filled out for all return visits</inlineHelpText>
    <label>Return Visit Reason</label>
    <type>TextArea</type>
</CustomField>