objects/Mechanical_Service_Sheet__c/fields/Return_Visit_Required__c.field-meta.xml
<CustomField>
    <fullName>Return_Visit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Visit Required</label>
    <type>Checkbox</type>
</CustomField>