objects/Mechanical_Service_Sheet__c/fields/Room_Depth__c.field-meta.xml
<CustomField>
    <fullName>Room_Depth__c</fullName>
    <label>Room Depth (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>