objects/Mechanical_Service_Sheet__c/fields/Room_Height__c.field-meta.xml
<CustomField>
    <fullName>Room_Height__c</fullName>
    <label>Room Height (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>