objects/Mechanical_Service_Sheet__c/fields/Room_Pressure_Depress__c.field-meta.xml
<CustomField>
    <fullName>Room_Pressure_Depress__c</fullName>
    <label>Room Pressure (Pa)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>