objects/Mechanical_Service_Sheet__c/fields/Room_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Room_Temperature__c</fullName>
    <label>Room Temperature (c)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>