objects/Mechanical_Service_Sheet__c/fields/Room_Volume_m3__c.field-meta.xml
<CustomField>
    <fullName>Room_Volume_m3__c</fullName>
    <label>Room Volume (m3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>