objects/Mechanical_Service_Sheet__c/fields/Room_Width__c.field-meta.xml
<CustomField>
    <fullName>Room_Width__c</fullName>
    <label>Room Width (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>