objects/Mechanical_Service_Sheet__c/fields/RS_Flow_Rate_l_s__c.field-meta.xml
<CustomField>
    <fullName>RS_Flow_Rate_l_s__c</fullName>
    <label>Flow Rate (l/s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>