objects/Mechanical_Service_Sheet__c/fields/RS_LCI_Leather_Strap__c.field-meta.xml
<CustomField>
    <fullName>RS_LCI_Leather_Strap__c</fullName>
    <label>LCI Leather Strap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>