objects/Mechanical_Service_Sheet__c/fields/Sales_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Recommendations__c</fullName>
    <inlineHelpText>Information in this field is forwarded to both Hentland&apos;s Sales and Service Teams, and appears on the Customers Copy of this service.</inlineHelpText>
    <label>Comments To Compliance Team</label>
    <type>TextArea</type>
</CustomField>