objects/Mechanical_Service_Sheet__c/fields/Sales_Recommendations_Update__c.field-meta.xml
<CustomField>
    <fullName>Sales_Recommendations_Update__c</fullName>
    <label>Sales Recommendations Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>