objects/Mechanical_Service_Sheet__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Inspection</fullName>
            </value>
            <value>
                <fullName>Visual Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>