objects/Mechanical_Service_Sheet__c/fields/Signage_Qty__c.field-meta.xml
<CustomField>
    <fullName>Signage_Qty__c</fullName>
    <label>Signage Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>