objects/Mechanical_Service_Sheet__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inspection_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>