objects/Mechanical_Service_Sheet__c/fields/Solenoid_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Solenoid_Calibration__c</fullName>
    <label>Solenoid Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>