objects/Mechanical_Service_Sheet__c/fields/SPNKL_LCI_Leather_Starp__c.field-meta.xml
<CustomField>
    <fullName>SPNKL_LCI_Leather_Starp__c</fullName>
    <label>LCI Leather Strap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>