objects/Mechanical_Service_Sheet__c/fields/SPR_Brass_LCi_Padlock__c.field-meta.xml
<CustomField>
    <fullName>SPR_Brass_LCi_Padlock__c</fullName>
    <label>Brass LCI Padlock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>