objects/Mechanical_Service_Sheet__c/fields/Stainless_Steel_Nozzle_Caps__c.field-meta.xml
<CustomField>
    <fullName>Stainless_Steel_Nozzle_Caps__c</fullName>
    <label>Stainless Steel Nozzle Caps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>