objects/Mechanical_Service_Sheet__c/fields/Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_and_Time__c</fullName>
    <inlineHelpText>If you populate Start and End Date and Times, and you leave job time empty, Salesforce will calculate it for you. Note this does not work for jobs taking more than one day. For that, you will need to manage the process and work out the overall time.</inlineHelpText>
    <label>Start Date and Time</label>
    <type>DateTime</type>
</CustomField>