objects/Mechanical_Service_Sheet__c/fields/Static_Pressure1__c.field-meta.xml
<CustomField>
    <fullName>Static_Pressure1__c</fullName>
    <label>Static Pressure (bar)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>