objects/Mechanical_Service_Sheet__c/fields/Static_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Static_Pressure__c</fullName>
    <inlineHelpText>(Bar)</inlineHelpText>
    <label>Static Pressure (bar)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>