objects/Mechanical_Service_Sheet__c/fields/Static_Pressures__c.field-meta.xml
<CustomField>
    <fullName>Static_Pressures__c</fullName>
    <label>Static Pressure (Pa)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>