objects/Mechanical_Service_Sheet__c/fields/Switch_Qty__c.field-meta.xml
<CustomField>
    <fullName>Switch_Qty__c</fullName>
    <label>Switch Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>