objects/Mechanical_Service_Sheet__c/fields/System_Location__c.field-meta.xml
<CustomField>
    <fullName>System_Location__c</fullName>
    <label>System Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>