objects/Mechanical_Service_Sheet__c/fields/System_Type1__c.field-meta.xml
<CustomField>
    <fullName>System_Type1__c</fullName>
    <label>System Type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>