objects/Mechanical_Service_Sheet__c/fields/System_Type2__c.field-meta.xml
<CustomField>
    <fullName>System_Type2__c</fullName>
    <label>System Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>