objects/Mechanical_Service_Sheet__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dry Riser</fullName>
            </value>
            <value>
                <fullName>Fire Suppression</fullName>
            </value>
            <value>
                <fullName>Hydrant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
            <value>
                <fullName>Wet Riser</fullName>
            </value>
            <value>
                <fullName>Dry Riser, Wet Riser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>