objects/Mechanical_Service_Sheet__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipName>Inspection_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>