objects/Mechanical_Service_Sheet__c/fields/Technician_s_Comments_Email__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Comments_Email__c</fullName>
    <defaultValue>&quot;technician.comments@hentland.com&quot;</defaultValue>
    <label>Technician&apos;s Comments Email</label>
    <type>Email</type>
</CustomField>