objects/Mechanical_Service_Sheet__c/fields/Technician_s_Comments_to_Customer_Update__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Comments_to_Customer_Update__c</fullName>
    <label>Technician&apos;s Comments to Customer Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>