objects/Mechanical_Service_Sheet__c/fields/Technician_s_Recommendations_email__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Recommendations_email__c</fullName>
    <defaultValue>&quot;technician.recommendations@hentland.com&quot;</defaultValue>
    <label>Technician&apos;s Recommendations email</label>
    <type>Email</type>
</CustomField>