objects/Mechanical_Service_Sheet__c/fields/Technician_Signature__c.field-meta.xml
<CustomField>
    <fullName>Technician_Signature__c</fullName>
    <label>Technician Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>