objects/Mechanical_Service_Sheet__c/fields/Terminal_Set_Decon__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Set_Decon__c</fullName>
    <label>Terminal Set Decon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>