objects/Mechanical_Service_Sheet__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <label>Test Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>