objects/Mechanical_Service_Sheet__c/fields/This_Is_A_Return_Visit__c.field-meta.xml
<CustomField>
    <fullName>This_Is_A_Return_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Is A Return Visit</label>
    <type>Checkbox</type>
</CustomField>