objects/Mechanical_Service_Sheet__c/fields/Time1__c.field-meta.xml
<CustomField>
    <fullName>Time1__c</fullName>
    <label>Time (mins)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>