objects/Mechanical_Service_Sheet__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time (mins)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>