objects/Mechanical_Service_Sheet__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <inlineHelpText>Travel Time in Hours</inlineHelpText>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>