objects/Mechanical_Service_Sheet__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>Type1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>