objects/Mechanical_Service_Sheet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>