objects/Mechanical_Service_Sheet__c/fields/Uplift_Remedial_Work_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Remedial_Work_PO_Number__c</fullName>
    <inlineHelpText>Technician to fill in Order Number if given to them on site.</inlineHelpText>
    <label>Uplift/Remedial Work PO Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>