objects/Mechanical_Service_Sheet__c/fields/UploadReportsWasUsed__c.field-meta.xml
<CustomField>
    <fullName>UploadReportsWasUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UploadReportsWasUsed</label>
    <type>Checkbox</type>
</CustomField>