objects/Mechanical_Service_Sheet__c/fields/Valve_Control_Safety_Pin__c.field-meta.xml
<CustomField>
    <fullName>Valve_Control_Safety_Pin__c</fullName>
    <label>Valve Control Safety Pin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>