objects/Mechanical_Service_Sheet__c/fields/Valve_Reason__c.field-meta.xml
<CustomField>
    <fullName>Valve_Reason__c</fullName>
    <label>Valve Reason</label>
    <type>TextArea</type>
</CustomField>