objects/Mechanical_Service_Sheet__c/fields/Valve_Sealing_Units__c.field-meta.xml
<CustomField>
    <fullName>Valve_Sealing_Units__c</fullName>
    <label>Valve Sealing Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>