objects/Mechanical_Service_Sheet__c/fields/Variance_Checked__c.field-meta.xml
<CustomField>
    <fullName>Variance_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variance Checked</label>
    <type>Checkbox</type>
</CustomField>