objects/Mechanical_Service_Sheet__c/fields/Visit_Type1__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type1__c</fullName>
    <label>Visit Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>