objects/Mechanical_Service_Sheet__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>