objects/Mechanical_Service_Sheet__c/fields/W_S_P_Lubrication__c.field-meta.xml
<CustomField>
    <fullName>W_S_P_Lubrication__c</fullName>
    <label>WSP Lubrication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>