objects/Mechanical_Service_Sheet__c/recordTypes/Fire_Suppression_System.recordType-meta.xml
<RecordType>
    <fullName>Fire_Suppression_System</fullName>
    <active>true</active>
    <label>Fire Suppression Service Sheet</label>
</RecordType>