objects/Mechanical_Service_Sheet__c/recordTypes/Hydrant_Service_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Hydrant_Service_Sheet</fullName>
    <active>true</active>
    <label>Hydrant Service Sheet</label>
</RecordType>