objects/Mechanical_Service_Sheet__c/recordTypes/Riser_Service_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Riser_Service_Sheet</fullName>
    <active>true</active>
    <label>Riser Service Sheet</label>
</RecordType>