objects/Mechanical_Service_Sheet__c/recordTypes/Sprinkler_Service_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Sprinkler_Service_Sheet</fullName>
    <active>true</active>
    <label>Sprinkler Service Sheet</label>
</RecordType>