objects/Mechanical_Service_Sheet__c/recordTypes/Suppression_System_And_Room_Integrity_Test.recordType-meta.xml
<RecordType>
    <fullName>Suppression_System_And_Room_Integrity_Test</fullName>
    <active>true</active>
    <label>Suppression System And Room Integrity Test</label>
</RecordType>