objects/Mechanical_Service_Sheet__c/validationRules/Cannot_Create_and_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_and_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  ISNEW() ,
 Fire_Extinguisher_Service_complete__c )</errorConditionFormula>
    <errorMessage>You cannot create a Mechanical Service Sheet and submit it at the same time. Please untick &apos;Submit Service Sheet&apos;, Save and then edit and save.</errorMessage>
</ValidationRule>