objects/Mechanical_Service_Sheet__c/validationRules/MSS_Brackets_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Brackets_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Brackets_Qty__c )), 
OR(ISBLANK( Brackets_Pass__c )), ISBLANK( Brackets_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Brackets Quantity</errorMessage>
</ValidationRule>