objects/Mechanical_Service_Sheet__c/validationRules/MSS_Check_Valves_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Check_Valves_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Check_Values_Qty__c )), 
OR(ISBLANK( Check_Valves_Pass__c )), ISBLANK( Check_Valves_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Check Valves Quantity</errorMessage>
</ValidationRule>