objects/Mechanical_Service_Sheet__c/validationRules/MSS_Cylinder_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Cylinder_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Cylinders_Qty__c)), 
OR(ISBLANK(Cylinders_Pass__c )), ISBLANK(Cylinders_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Cylinder Quantity</errorMessage>
</ValidationRule>