objects/Mechanical_Service_Sheet__c/validationRules/MSS_Fusible_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Fusible_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Fusible_Links_Qty__c )), 
OR(ISBLANK( Fusible_Links_Pass__c )), ISBLANK( Fusible_Links_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Fusible Links Quantity</errorMessage>
</ValidationRule>