objects/Mechanical_Service_Sheet__c/validationRules/MSS_Link_Lines_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Link_Lines_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Link_Lines_Qty__c )), 
OR(ISBLANK( Link_Lines_Pass__c )), ISBLANK( Link_Lines_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Link Lines Quantity</errorMessage>
</ValidationRule>