objects/Mechanical_Service_Sheet__c/validationRules/MSS_Liquid_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Liquid_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Liquid_Level_Qty__c )), 
OR(ISBLANK( Liquid_Level_Pass__c )), ISBLANK( Liquid_Level_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Liquid Level Quantity</errorMessage>
</ValidationRule>