objects/Mechanical_Service_Sheet__c/validationRules/MSS_Manual_Release_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Manual_Release_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Manual_Release_Point_Qty__c )), 
OR(ISBLANK( Manual_Release_Point_Pass__c )), ISBLANK( Manual_Release_Point_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Manual Release Point Quantity</errorMessage>
</ValidationRule>