objects/Mechanical_Service_Sheet__c/validationRules/MSS_Nozzels_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Nozzels_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Nozzles_Qty__c )), 
OR(ISBLANK( Nozzles_Pass__c )), ISBLANK( Nozzles_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Nozzles Quantity</errorMessage>
</ValidationRule>