objects/Mechanical_Service_Sheet__c/validationRules/MSS_Pressures_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Pressures_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Pressures_Oty__c )), 
OR(ISBLANK( Pressures_Pass__c )), ISBLANK( Pressures_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Pressures Quantity</errorMessage>
</ValidationRule>