objects/Mechanical_Service_Sheet__c/validationRules/MSS_Signage_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Signage_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Signage_Qty__c )), 
OR(ISBLANK( Signage_Pass__c )), ISBLANK( Signage_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Signage Quantity</errorMessage>
</ValidationRule>