objects/Mechanical_Service_Sheet__c/validationRules/MSS_Switch_Quantity_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>MSS_Switch_Quantity_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Switch_Qty__c )), 
OR(ISBLANK( Switch_Pass__c )), ISBLANK( Switch_Fail__c ))</errorConditionFormula>
    <errorMessage>Please enter Pass or Fail for Switch Quantity</errorMessage>
</ValidationRule>