objects/Mechanical_Service_Sheet__c/validationRules/Other_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Other__c!=NULL,OR(ISBLANK(Other_Qty__c),Other_Qty__c=0))</errorConditionFormula>
    <errorDisplayField>Other_Qty__c</errorDisplayField>
    <errorMessage>Please Enter the &quot;Other Parts Qty&quot; value</errorMessage>
</ValidationRule>