objects/Mechanical_Service_Sheet__c/validationRules/Return_Visit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Visit_Required</fullName>
    <active>true</active>
    <errorConditionFormula>And( Return_Visit_Required__c = TRUE,ISBLANK( Return_Visit_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Agent_Fill__c</errorDisplayField>
    <errorMessage>Please Enter the Return Visit Reason</errorMessage>
</ValidationRule>