objects/Mechanical_Service_Sheet__c/validationRules/Upload_Sprinkler_Report.validationRule-meta.xml
<ValidationRule>
    <fullName>Upload_Sprinkler_Report</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( System_Type__c , &apos;Sprinkler&apos;), UploadReportsWasUsed__c = FALSE, Fire_Extinguisher_Service_complete__c = TRUE 
)</errorConditionFormula>
    <errorMessage>Please upload a Sprinkler Report or state a reason if there are no report. See the Upload report button</errorMessage>
</ValidationRule>